--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <style>
+    body {
+        background-image: url('https://i.imgur.com/gvkQrNv.mp4');
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
