--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <style>
     body {
-        background-image: url('https://i.imgur.com/gvkQrNv.mp4');
+        background-image: url('https://assets.codepen.io/6093409/river.jpg');
         }
     </style>
     <meta charset="UTF-8">
@@ -18,6 +18,14 @@
     {% include head-custom.html %}
   </head>
   <body>
+      <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe>
+      <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
+        <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
+      </video>
+
+
+      <h2>.</h2>
+      <h1>Listen To Music While You Browse?.</h1>
     <div class="wrapper">
 <!--      <header>-->
 <!--        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>-->
