--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
     <style>
     body {
         background-image: url('https://assets.codepen.io/6093409/river.jpg');
