--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     
       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe>
       <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-        <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
+        <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
       </video>
 
 
