--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
     <style>
     body {
-        background-image: url('https://assets.codepen.io/6093409/river.jpg');
+        background-image: url('https://i.imgur.com/ZaBtz8l.png');
         }
     </style>
     <meta charset="UTF-8">
