--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
   </head>
   <body> 
     
-<!--       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe>
+<!--       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe> -->
       <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
         <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
-      </video> -->
+      </video>
 
       <iframe width="560" height="315" src="https://www.youtube.com/embed/6s3kEWrQwvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
     
