--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
       </video>
 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/6s3kEWrQwvs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
     
 
       <h2>.</h2>
