--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,13 @@
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
     <style>
     body {
-        background-image: url('https://i.imgur.com/ZaBtz8l.png');
-        }
+        background-image: url('https://i.imgur.com/LVinWsB.mp4');
+/*         background-image: url('https://i.imgur.com/ZaBtz8l.png'); */
+        background-size: cover;
+        height: 100vh;
+        padding:0;
+        margin:0;
+    }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
