--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,7 @@
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
     <style>
     body {
-        background-image: url('https://i.imgur.com/LVinWsB.mp4');
-/*         background-image: url('https://i.imgur.com/ZaBtz8l.png'); */
+        background-image: url('https://i.imgur.com/ZaBtz8l.png');
         background-size: cover;
         height: 100vh;
         padding:0;
@@ -29,8 +28,7 @@
       <video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
         <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
       </video>
-
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+      <iframe width="361" height="25" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
     
 
       <h2>.</h2>
