--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
       </video>
 
-      <h2>.</h2>
-      <h1>Listen To Music While You Browse?.</h1>
+<!--       <h2>.</h2>
+      <h1>Listen To Music While You Browse?.</h1> -->
     <div class="wrapper">
       <section>
 
