--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
     <style>
-    body {
+/*     body {
         background-image: url('https://i.imgur.com/ZaBtz8l.png');
         background-size: cover;
         height: 100vh;
         padding:0;
         margin:0;
-    }
+    } */
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,7 +25,7 @@
   <body> 
       <iframe width="361" height="25" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z&index=-1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
 <!--       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe> -->
-      <video id="background-video" autoplay loop muted poster="https://i.imgur.com/LVinWsB.mp4">
+      <video id="myVideo" autoplay loop muted poster="https://i.imgur.com/LVinWsB.mp4">
         <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
       </video>
 
