--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,18 @@
   <body> 
       <iframe width="361" height="25" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z&index=-1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
 <!--       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe> -->
-      <video id="myVideo" autoplay loop muted poster="https://i.imgur.com/LVinWsB.mp4">
-        <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
-      </video>
 
+      <div class="video-wrapper">
+        <video id="myVideo" autoplay loop muted poster="https://i.imgur.com/LVinWsB.mp4">
+          <source src="https://i.imgur.com/LVinWsB.mp4" type="video/mp4">
+        </video>
+
+        <!-- This will be positioned on top of our video background -->
+        <div class="header">
+          <h1>Blueberry Cheesecake</h1>
+          <button>Recipe here</button>
+        </div>
+      </div>
 <!--       <h2>.</h2>
       <h1>Listen To Music While You Browse?.</h1> -->
     <div class="wrapper">
