--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>
+    <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>    
+    <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico">    
     <style>
 /*     body {
         background-image: url('https://i.imgur.com/ZaBtz8l.png');
