--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,3 +59,26 @@ body {
   font-style: normal;
   line-height: 1.5;
 }
+
+
+nav{
+  height: 10vh;
+  background: #5b78c7;
+}
+
+.nav-links{
+  display: flex;
+  list-style: none;
+  width: 50%;
+  background: lightcoral;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
+  margin-left: auto;
+}
+
+.nav-links li a{
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
