--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,12 +61,12 @@ body {
 }
 
 
-nav{
+nav {
   height: 10vh;
   background: #5b78c7;
 }
 
-.nav-links{
+.nav-Links {
   display: flex;
   list-style: none;
   width: 50%;
@@ -77,7 +77,7 @@ nav{
   margin-left: auto;
 }
 
-.nav-links li a{
+.nav-Links li a{
   color: white;
   text-decoration: none;
   font-size: 16px;
