--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,7 +70,6 @@ nav {
   display: flex;
   list-style: none;
   width: 50%;
-  background: lightcoral;
   height: 100%;
   justify-content: space-around;
   align-items: center;
@@ -78,7 +77,7 @@ nav {
 }
 
 .nav-Links li a{
-  color: white;
+  color: black;
   text-decoration: none;
   font-size: 16px;
 }
