--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <div class="line"></div>        
       </div>
       <ul class="nav-links">
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Projects</a></li>        
       </ul>
