--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -70,6 +70,7 @@ nav {
   display: flex;
   list-style: none;
   width: 50%;
+  background: lightcoral;
   height: 100%;
   justify-content: space-around;
   align-items: center;
