--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
   <head>
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>    
     <style>
-/*     body {
-        background-image: url('https://i.imgur.com/ZaBtz8l.png');
+    body {
+        background-image: url('https://animalcrossingworld.com/wp-content/uploads/2020/02/Switch_ACNH_0220-Direct_Advanced_SCRN_08.jpg');
         background-size: cover;
         height: 100vh;
         padding:0;
         margin:0;
-    } */
+    }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
