--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
         <li><a href="#">Projects</a></li>        
       </ul>
     </nav> -->
-      <iframe width="361" height="25" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z&index=-1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
+<!--       <iframe width="361" height="25" src="https://www.youtube.com/embed/videoseries?list=PL7zFAIWEw3g0mABCd7sOMEjgqd3gI-I_Z&index=-1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        
 <!--       <iframe src="https://open.spotify.com/embed/playlist/2VojZ70yfWaSeVfY2gjwVC?theme=0" width="20%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media" style="align-iten:center;align-content:center;align-self:center;margin: 0;    position: absolute;    top: 50%;    left: 50%;    -ms-transform: translate(-50%, -50%);    transform: translate(-50%, -50%); "></iframe> -->
 
       <div class="video-wrapper">
@@ -49,7 +49,7 @@
           <h1>Blueberry Cheesecake</h1>
           <button>Recipe here</button>
         </div>
-      </div>
+      </div> -->
 <!--       <h2>.</h2>
       <h1>Listen To Music While You Browse?.</h1> -->
     <div class="wrapper">
