--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,9 @@
           <h1>Blueberry Cheesecake</h1>
           <button>Recipe here</button>
         </div>
-      </div> --> -->
+      </div> -->
 <!--       <h2>.</h2>
-      <h1>Listen To Music While You Browse?.</h1> --> -->
+      <h1>Listen To Music While You Browse?.</h1> -->
     <div class="wrapper">
       <section>
 
