--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <link rel="apple-touch-icon" href="https://i.imgur.com/gdtXdqD.png"/>    
     <style>
     body {
-        background-image: url('https://animalcrossingworld.com/wp-content/uploads/2020/02/Switch_ACNH_0220-Direct_Advanced_SCRN_08.jpg');
+        background-image: url('https://animalcrossingworld.com/wp-content/uploads/2020/02/Switch_ACNH_0220-Direct_Advanced_SCRN_08.jpg') no-repeat center center fixed;;
         background-size: cover;
         height: 100vh;
         padding:0;
