--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
-    <link rel="apple-touch-icon" href="https://i.imgur.com/0bdNxs0.png"/>    
+    <link rel="apple-touch-icon" href="https://i.imgur.com/0bdNxs0.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="https://i.imgur.com/0bdNxs0.png">
     <style>
     body {
         background-image: url('https://animalcrossingworld.com/wp-content/uploads/2020/02/Switch_ACNH_0220-Direct_Advanced_SCRN_08.jpg') no-repeat center center fixed;;
