--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,59 +26,59 @@ font-style: normal;
 font-display: swap;
 }
 
-#myVideo {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.video-wrapper {
-  border: 2px solid #000;
-  width: 400px;
-  height: 200px;
-  position: relative;
-  overflow: hidden;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;
-}
-.header{
-  position: relative;
-  color: white;
-  text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
-  font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;
-}
+// #myVideo {
+//   object-fit: cover;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   height: 100%;
+//   width: 100%;
+// }
+// .video-wrapper {
+//   border: 2px solid #000;
+//   width: 400px;
+//   height: 200px;
+//   position: relative;
+//   overflow: hidden;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;
+// }
+// .header{
+//   position: relative;
+//   color: white;
+//   text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
+//   font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;
+// }
 
-body {
-  font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;    
-  font-weight: 400;
-  font-style: normal;
-  line-height: 1.5;
-}
+// body {
+//   font-family: 'uglydave', -apple-system, BlinkMacSystemFont, sans-serif;    
+//   font-weight: 400;
+//   font-style: normal;
+//   line-height: 1.5;
+// }
 
 
-nav {
-  height: 10vh;
-  background: #5b78c7;
-}
+// nav {
+//   height: 10vh;
+//   background: #5b78c7;
+// }
 
-.nav-Links {
-  display: flex;
-  list-style: none;
-  width: 50%;
-  background: lightcoral;
-  height: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
-}
+// .nav-Links {
+//   display: flex;
+//   list-style: none;
+//   width: 50%;
+//   background: lightcoral;
+//   height: 100%;
+//   justify-content: space-around;
+//   align-items: center;
+//   margin-left: auto;
+// }
 
-.nav-Links li a{
-  color: white;
-  text-decoration: none;
-  font-size: 16px;
-}
+// .nav-Links li a{
+//   color: white;
+//   text-decoration: none;
+//   font-size: 16px;
+// }
